upd localization prop files

--- a/src/main/resources/local_en.properties
+++ b/src/main/resources/local_en.properties
@@ -14,16 +14,18 @@ index.section.home.h1.2= Easier & Faster.
 index.section.home.p=Cargo-Delivery is a leading global online cargo delivery company, connecting consumers through its platform in 24 countries.
 index.section.home.btn=Make Order
 index.section.calc.legend=Calc form
-index.section.calc.label.route_start=Start Route
-index.section.calc.label.route_end=End Route
+index.section.calc.label.route_start=City Sender
+index.section.calc.label.route_end=City Recipient
 index.section.calc.label.delivery_date=Delivery date
 index.section.calc.p.cargo_details=Cargo details
-index.section.calc.label.length=Length
-index.section.calc.label.width=Width
-index.section.calc.label.height=Height
-index.section.calc.label.weight=Weight
+index.section.calc.label.length=Length, cm
+index.section.calc.label.width=Width, cm
+index.section.calc.label.height=Height, cm
+index.section.calc.label.weight=Weight, kg
 index.section.calc.label.price=Price
-index.section.calc.btn=Make order
+index.section.calc.btn.submit=Order
+index.section.calc.btn.calculate=Calc
+index.section.calc.btn.clear=Clear
 index.section.calc.h1.1=Calc Your Cargo
 index.section.calc.h1.2= Easier & Faster.
 index.section.content.p=Cargo-Delivery is a leading global online cargo delivery company, connecting consumers through its platform in 24 countries.
@@ -101,22 +103,21 @@ profile.user.table.header.2=st details
 profile.user.table.header.balance=Balance:
 profile.user.table.empty=No orders!
 profile.user.table.thead.th.input.1=Order
-profile.user.table.thead.th.input.2=Cargo
-profile.user.table.thead.th.input.3=Price, ₴
-profile.user.table.thead.th.input.4=From
-profile.user.table.thead.th.input.5=To
-profile.user.table.thead.th.input.6=Registration date
-profile.user.table.thead.th.input.7=Delivery date
-profile.user.table.thead.th.input.8=State
-profile.user.table.thead.th.input.9=Actions
+profile.user.table.thead.th.input.2=User ID
+profile.user.table.thead.th.input.3=Route
+profile.user.table.thead.th.input.4=Registration date
+profile.user.table.thead.th.input.5=Delivery date
+profile.user.table.thead.th.input.6=Price, ₴
+profile.user.table.thead.th.input.7=Actions
 profile.user.table.tbody.action.info=Info
 profile.user.table.tbody.action.delete=Delete
 profile.user.table.tbody.action.pay=Pay
-profile.user.table.cargo.header.1=Selected ca
-profile.user.table.cargo.header.2=rgo details
+profile.user.table.tbody.action.bill=Bill
+profile.user.table.cargo.header.1=Selected or
+profile.user.table.cargo.header.2=der details
 profile.user.table.cargo.empty=No cargo was selected!
-profile.user.table.cargo.thead.th.1=Cargo id
-profile.user.table.cargo.thead.th.2=Length, cm
-profile.user.table.cargo.thead.th.3=Width, cm
-profile.user.table.cargo.thead.th.4=Height, cm
-profile.user.table.cargo.thead.th.5=Weight, kg
+profile.user.table.cargo.thead.th.1=Length, cm
+profile.user.table.cargo.thead.th.2=Width, cm
+profile.user.table.cargo.thead.th.3=Height, cm
+profile.user.table.cargo.thead.th.4=Weight, kg
+profile.user.table.cargo.thead.th.5=Order State
