--- a/src/main/resources/local_uk.properties
+++ b/src/main/resources/local_uk.properties
@@ -14,8 +14,8 @@ index.section.home.h1.2=просто і швидко
 index.section.home.p=Cargo-Delivery це провідна глобальна онлайн компанія з доставки вантажів, яка об'єднує користувачів через  свою платформу у 24 країнах світу.
 index.section.home.btn=Оформити замовлення
 index.section.calc.legend=Форма
-index.section.calc.label.route_start=Початок марш.
-index.section.calc.label.route_end=Кінець марш.
+index.section.calc.label.route_start=Місто-Відправник
+index.section.calc.label.route_end=Місто-Отримувач
 index.section.calc.label.delivery_date=Дата доставки
 index.section.calc.p.cargo_details=Деталі вантажу
 index.section.calc.label.length=Довжина, см
@@ -23,7 +23,9 @@ index.section.calc.label.width=Ширина, см
 index.section.calc.label.height=Висота, см
 index.section.calc.label.weight=Вага, кг
 index.section.calc.label.price=Ціна
-index.section.calc.btn=Замовити
+index.section.calc.btn.submit=Замовити
+index.section.calc.btn.calculate=Розрахувати
+index.section.calc.btn.clear=Очистити
 index.section.calc.h1.1=Розрахуй доставку вантажу
 index.section.calc.h1.2=просто і швидко.
 index.section.content.p=Cargo-Delivery це провідна глобальна онлайн компанія з доставки вантажів, яка об'єднує користувачів через  свою платформу у 24 країнах світу.
@@ -93,30 +95,30 @@ signup.link.to.login.a=Аутентифікація
 signup.button.go.index=На головну, як гість
 # USER PROFILE PAGE
 profile.user.navbar.profile=Профіль
-profile.user.navbar.orders=Обновити замовлення
+profile.user.navbar.orders=Оновити замовлення
 profile.user.navbar.download.orders=Скачати звіт
-profile.user.navbar.balance=Повнити рахунок
-profile.user.table.header.1=Список дет
-profile.user.table.header.2=алей замовлень
+profile.user.navbar.balance=Поповнити рахунок
+profile.user.table.header.1=Список 
+profile.user.table.header.2=замовлень
 profile.user.table.header.balance=Баланс:
 profile.user.table.empty=Немає замовлень
 profile.user.table.thead.th.input.1=Замовлення
-profile.user.table.thead.th.input.2=Вантаж
-profile.user.table.thead.th.input.3=Ціна, ₴
-profile.user.table.thead.th.input.4=Звідки
-profile.user.table.thead.th.input.5=Куди
-profile.user.table.thead.th.input.6=Дата регістрації
-profile.user.table.thead.th.input.7=Дата доставки
-profile.user.table.thead.th.input.8=Стан
-profile.user.table.thead.th.input.9=Дії
+profile.user.table.thead.th.input.2=ID Замовника
+profile.user.table.thead.th.input.3=Маршрут
+profile.user.table.thead.th.input.4=Дата регістрації
+profile.user.table.thead.th.input.5=Дата доставки
+profile.user.table.thead.th.input.6=Ціна, ₴
+profile.user.table.thead.th.input.7=Дії
 profile.user.table.tbody.action.info=Деталі
 profile.user.table.tbody.action.delete=Видалити
 profile.user.table.tbody.action.pay=Оплатити
+profile.user.table.tbody.action.bill=Чек
 profile.user.table.cargo.header.1=Деталі обра
 profile.user.table.cargo.header.2=ного вантажу
 profile.user.table.cargo.empty=Не обрано жодного вантажу!
-profile.user.table.cargo.thead.th.1=Номер вантажу
-profile.user.table.cargo.thead.th.2=Довжина, см
-profile.user.table.cargo.thead.th.3=Ширина, см
-profile.user.table.cargo.thead.th.4=Висота, см
-profile.user.table.cargo.thead.th.5=Вага, кг
+profile.user.table.cargo.thead.th.1=Довжина, см
+profile.user.table.cargo.thead.th.2=Ширина, см
+profile.user.table.cargo.thead.th.3=Висота, см
+profile.user.table.cargo.thead.th.4=Вага, кг
+profile.user.table.cargo.thead.th.5=Статус
+# MANAGER(ADMIN) PROFILE PAGE
