upd localization prop files

--- a/src/main/resources/local_uk.properties
+++ b/src/main/resources/local_uk.properties
@@ -121,4 +121,26 @@ profile.user.table.cargo.thead.th.2=Ширина, см
 profile.user.table.cargo.thead.th.3=Висота, см
 profile.user.table.cargo.thead.th.4=Вага, кг
 profile.user.table.cargo.thead.th.5=Статус
-# MANAGER(ADMIN) PROFILE PAGE
+# ADMIN PROFILE PAGE
+profile.admin.navbar.profile=Профіль
+profile.admin.navbar.users=Користувачі
+profile.admin.navbar.orders=Замовлення
+profile.admin.table.header.1=Резул
+profile.admin.table.header.2=ьтат команди
+profile.admin.table.thead.th.input.1=Замовлення
+profile.admin.table.thead.th.input.2=ID замовника
+profile.admin.table.thead.th.input.3=Маршрут
+profile.admin.table.thead.th.input.4=Дата регістрації
+profile.admin.table.thead.th.input.5=Дата доставки
+profile.admin.table.thead.th.input.6=Ціна, ₴
+profile.admin.table.thead.th.input.7=Статус
+profile.admin.table.thead.th.input.8=Дії
+profile.admin.table.tbody.action.approve=Підтвердити
+profile.admin.table.tbody.action.block=Заблокувати
+profile.admin.table.users.thead.th.input.1=Користувач
+profile.admin.table.users.thead.th.input.2=Ім`я
+profile.admin.table.users.thead.th.input.3=Прізвище
+profile.admin.table.users.thead.th.input.4=Ел. пошта
+profile.admin.table.users.thead.th.input.5=Дата регістрації
+profile.admin.table.users.thead.th.input.6=Роль
+profile.admin.table.empty=Не обрано жодної команди!
